# meta-mcp

./: .gitignore  CHANGELOG.md  INSTALL.md  PRD.md  README.md  TECH_DEBT_ROADMAP.md  debug_mcp.py  diagnostic_mcp.py  minimal_test.py  pyproject.toml  restart.ps1  simple_mcp.py  start-dev.ps1  test_minimal_mcp.py  windsurf_mcp.py
adn/: meta-mcp-ecosystem-orchestrator.md  meta-mcp-project-evolution-summary.md  repomix-integration-technical-deep-dive.md
backend/tools/: gamemaker-builder.ps1
docs/: POWERSHELL_BEST_PRACTICES.md
docs/tools/: README.md  analysis.md  client-management.md  diagnostics.md  discovery.md  repo-packing.md  repository-intelligence.md  scaffolding.md  server-management.md  token-analysis.md  tool-execution.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
scripts/: kill-zombies.ps1
src/meta_mcp/: __init__.py  __main__.py  api_router.py  core.py  main.py  mcp_server.py  mcp_server_clean.py  mcp_server_complete.py  mcp_server_minimal.py  mcp_server_sota.py  mcp_server_sota_compliant.py  mcp_server_working.py
src/meta_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test-project-3/www/: bio.html  donate.html  index.html  styles.css
test-project/www/: bio.html  donate.html  download.html  how_it_works.html  index.html
tests/: test_emojibuster.py  test_runt_analyzer.py
tools/: fullstack-builder.ps1  fullstack_builder_ASSESSMENT.md  webshop-builder.ps1  wisdom-tree-builder.ps1
web/: index.html  package-lock.json  package.json  vite.config.ts
(+129 files in other folders)
